cabal-version: 3.0
name: heck
version: 1.0.1.0
synopsis: Abstract unit test interface
description: Heck provides an abstract unit test interface.
category: Testing
extra-doc-files:
  CHANGELOG.md
  README.md

license: 0BSD
license-file: LICENSE.txt
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/heck
  type: git

flag pedantic
  default: False
  manual: True

library
  build-depends: base ^>={4.20, 4.21, 4.22}
  default-language: Haskell2010
  exposed-modules: Heck
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-export-lists
    -Wno-missing-kind-signatures
    -Wno-missing-role-annotations
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe

  hs-source-dirs: source/library

  if flag(pedantic)
    ghc-options: -Werror
